--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -36,7 +36,7 @@ jobs:
           python chat-gpt-pr-reviewer/.ai/io/nerdythings/github_reviewer.py
 
       - name: Upload result as an artifact
-        uses: actions/upload-artifact@v4  # Updated version
+        uses: actions/upload-artifact@v4
         with:
           name: AI-requests
           path: output.txt
